--- a/src/hoadb/css/main.css
+++ b/src/hoadb/css/main.css
@@ -1,4 +1,8 @@
-* {
+/* ==========================================================================
+   Author's custom styles
+   ========================================================================== */
+
+   * {
 	font-family: Arial, Helvetica, sans-serif;
   }
   
@@ -20,34 +24,17 @@
 	font-size: 3.5em;
   }
 
-
-/* JJK 3/15/2020 */
-.link-tile {
-    width: 175px;
-}
-.link-tile-sm {
-    width: 130px;
-}
-
 /* Turn off the outline on clicks to brand anchors */
-li {
-	list-style-type: none;
-}
-a:link {
-	outline: 0;
-	text-decoration:none; 
-}
 
-a.navbar-brand {
-	outline: 0;
-}
-
-/*
 a {
 	outline: 0;
 	text-decoration:none; 
 	}
-
+a:link {
+	outline: 0;
+	text-decoration:none; 
+}
+/*
 a:visited {
 	outline: 0;
 	text-decoration:none; 
@@ -56,9 +43,13 @@ a:hover {
 	outline: 0;
 	text-decoration:none; 
 }
-
+*/
 a:active {
 	outline: 0;
 	text-decoration:none; 
 }
-*/
+
+li {
+	list-style-type: none;
+}
+
