--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,6 +21,9 @@
   }
 
 
+/* .small-header th { font-size: 0.8rem; } */
+/* .small-row td { font-size: 0.8rem; } */
+
 /* JJK 3/15/2020 */
 .link-tile {
     width: 175px;
