--- a/src/css/main.css
+++ b/src/css/main.css
@@ -32,7 +32,8 @@ button, input, textarea, select {
 
 /* JJK 3/15/2020 */
 .link-tile {
-    width: 175px;
+    width: 165px;
+    /* width: 175px;*/
 }
 .link-tile-sm {
     width: 130px;
